интеграция какфки и постгрес
