# docs/swagger.json
@@ -50,52 +50,6 @@
                 }
             }
         },
-        "/send": {
-            "post": {
-                "description": "Отправляет сообщение, полученное в теле запроса, в Kafka.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "messages"
-                ],
-                "summary": "Отправить сообщение в Kafka",
-                "parameters": [
-                    {
-                        "description": "Сообщение для отправки",
-                        "name": "message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Message"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Message sent",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request payload",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to produce message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/stats": {
             "get": {
                 "description": "Get statistics from the database",
